alpaca-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-test
  labels:
    app: alpaca
    ver: "2"
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpaca
  template:
    metadata:
      labels:
        app: alpaca
        ver: "2"
        env: test
    spec:
      containers:
      - name: gcr
        image: gcr.io/kuar-demo/kuard-amd64:green
        ports:
        - containerPort: 8080
