bandicoot-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-staging
  labels:
    app: bandicoot
    ver: "2"
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bandicoot
  template:
    metadata:
      labels:
        app: bandicoot
        ver: "2"
        env: staging
    spec:
      containers:
      - name: gcr
        image: gcr.io/kuar-demo/kuard-amd64:green
        ports:
        - containerPort: 8080
