my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    ver: "1"
    app: kuard
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpaca-prod
      env: prod
  template:
    metadata:
      labels:
        app: alpaca-prod
        env: prod
        ver: "1"
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
          protocol: TCP
