test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
spec:
  volumes:
    - name: kuard-data
      hostPath:
        path: /var/lib/kuard
  containers:
  - name: ubuntu-container
    image: ubuntu
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - name: kuard-data
      mountPath: /tmp
