alpaca-prod-replica-set.yaml

apiVersion: v1
kind: Service
metadata:
  name: alpaca-service
spec:
  type: ClusterIP
  selector:
       app: alpaca-prod-replica-set-app
       tier: frontend
       environment: pre-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
